fix: change get first